# IMG2STL

./: CMakeLists.txt  README.md
src/: main.cpp
